changes to cost, fix alignment issues

--- a/framebuzz/static/framebuzz/marketing/css/sass/home.scss
+++ b/framebuzz/static/framebuzz/marketing/css/sass/home.scss
@@ -274,8 +274,8 @@ div.row.read-more-separator {
                 letter-spacing: -0.03em;
                 color: #999999;
                 text-align: center;
-                position: absolute;
-                top: 663px;
+                margin-bottom: 120px;
+                margin-top: 30px;
 
                 p { text-align: center; }
             }
